--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
-    "@smui/select": "^7.0.0",
     "@smui/tab": "^7.0.0",
     "@smui/tab-bar": "^7.0.0",
     "rollup": "^3.15.0",
@@ -22,6 +21,7 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-material-ui": "^7.0.0"
   }
 }
