--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "@smui/data-table": "^7.0.0",
+    "@smui/select": "^7.0.0",
     "@smui/tab": "^7.0.0",
     "@smui/tab-bar": "^7.0.0",
     "rollup": "^3.15.0",
@@ -21,6 +23,7 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "flowbite-svelte": "^0.46.15",
     "sirv-cli": "^2.0.0",
     "svelte-material-ui": "^7.0.0"
   }
