feat:changing some designes

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "d3": "^7.9.0",
     "flowbite-svelte": "^0.46.15",
     "sirv-cli": "^2.0.0",
-    "svelte-material-ui": "^7.0.0"
+    "svelte-material-ui": "^7.0.0",
+    "swiper": "^6.8.4"
   }
 }
