--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "serve": "node server.js",
+    "serve-dev": "nodemon server.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
@@ -26,6 +28,7 @@
   "dependencies": {
     "animejs": "^3.2.2",
     "d3": "^7.9.0",
+    "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
     "sirv-cli": "^2.0.0",
     "svelte-material-ui": "^7.0.0",
