--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "dependencies": {
     "animejs": "^3.2.2",
+    "chart.js": "^3.5.0",
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
     "sirv-cli": "^2.0.0",
+    "svelte-chartjs": "^2.1.1",
     "svelte-material-ui": "^7.0.0",
     "swiper": "^6.8.4"
   }
