--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "flowbite-svelte": "^0.46.15",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^2.1.1",
+    "svelte-i18n": "^4.0.0",
     "svelte-material-ui": "^7.0.0",
     "swiper": "^6.8.4"
   }
