--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
     "svelte": "^3.55.0",
-    "svelte-routing": "^2.13.0"
+    "svelte-routing": "^2.13.0",
+    "vite": "^5.4.3"
   },
   "dependencies": {
     "animejs": "^3.2.2",
+    "axios": "^1.7.7",
     "chart.js": "^3.5.0",
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
+    "local-cors-proxy": "^1.1.0",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^2.1.1",
     "svelte-i18n": "^4.0.0",
