--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv public --no-clear --host 192.168.25.11",
     "serve": "node server.js",
     "serve-dev": "nodemon server.js"
   },
@@ -33,11 +33,13 @@
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
+    "http-proxy-middleware": "^3.0.2",
     "local-cors-proxy": "^1.1.0",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^2.1.1",
     "svelte-i18n": "^4.0.0",
     "svelte-material-ui": "^7.0.0",
-    "swiper": "^6.8.4"
+    "swiper": "^6.8.4",
+    "xlsx": "^0.18.5"
   }
 }
