--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear --host 192.168.25.11",
+    "start": "sirv public --no-clear",
     "serve": "node server.js",
     "serve-dev": "nodemon server.js"
   },
