--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
     "http-proxy-middleware": "^3.0.2",
+    "js-cookie": "^3.0.5",
     "local-cors-proxy": "^1.1.0",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^2.1.1",
