--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "svelte-chartjs": "^2.1.1",
     "svelte-i18n": "^4.0.0",
     "svelte-material-ui": "^7.0.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^6.8.4",
     "xlsx": "^0.18.5"
   }
