--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-proxy-middleware": "^3.0.2",
     "js-cookie": "^3.0.5",
     "local-cors-proxy": "^1.1.0",
+    "moment": "^2.30.1",
     "sirv-cli": "^2.0.0",
     "svelte-chartjs": "^2.1.1",
     "svelte-i18n": "^4.0.0",
