--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "svelte-i18n": "^4.0.0",
     "svelte-material-ui": "^7.0.0",
     "sweetalert": "^2.1.2",
-    "swiper": "^6.8.4"
+    "swiper": "^6.8.4",
+    "xlsx": "^0.18.5"
   }
 }
