--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "animejs": "^3.2.2",
     "axios": "^1.7.7",
     "chart.js": "^3.5.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "flowbite-svelte": "^0.46.15",
