--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "@smui-extra/accordion": "^7.0.0",
     "@smui/data-table": "^7.0.0",
     "@smui/select": "^7.0.0",
     "@smui/tab": "^7.0.0",
     "@smui/tab-bar": "^7.0.0",
+    "flowbite": "^2.5.2",
+    "flowbite-svelte": "^0.47.3",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "rollup": "^3.15.0",
@@ -37,7 +40,6 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "express": "^4.19.2",
-    "flowbite-svelte": "^0.46.23",
     "http-proxy-middleware": "^3.0.2",
     "js-cookie": "^3.0.5",
     "local-cors-proxy": "^1.1.0",
