--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rollup -c",
     "serve-dev": "nodemon server.js",
     "dev": "rollup -c -w --single",
-    "start": "sirv public --no-clear --single",
-    "serve": "sirv public --no-clear --single"
+    "start": "sirv public --no-clear --single --port 9001",
+    "serve": "sirv public --no-clear --single --port 9001"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
